[package]
name = "game"
version = "0.1.0"
edition = "2021"

[dependencies]
learn_game = { path = "../learn_game" }
ndarray = "0.16.1"
rand = "0.8.5"
anyhow = "1.0.90"
chrono = "0.4.38"
serde = { version = "1.0.209", features = ["derive"] }
serde-pickle = "1.1.1"
serde_json = "1.0"
itertools = "0.13.0"
